--- a/.github/workflows/xlog.yml
+++ b/.github/workflows/xlog.yml
@@ -40,7 +40,7 @@ jobs:
         run: |
           ../xlog \
           --build . \
-          --sitename "digital-garden"
+          --sitename "odieder"
           rm *.md
           chmod -R 0777 .          
 
